--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "emailjs-com": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hash-link": "^1.0.1",
     "react-router-dom": "^6.0.2",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.3",
     "react-simple-typewriter": "^3.0.1",
     "react-slick": "^0.28.1",
